# image-search

./: .env  .gitignore  Cargo.toml  Dockerfile.tool  Makefile  README.md  docker-compose.yaml
.sqlx/: query-20355fc34ea4bb15a1a831ba315184c1a70020b0515ac80a1f16e0046204a878.json
services/clip-model/: Dockerfile  config.yaml  requirements.txt
services/clip-model/src/: main.py
services/img-to-vec-worker/: Cargo.toml  Dockerfile
services/img-to-vec-worker/src/: main.rs
services/web-server/: Cargo.toml  Dockerfile  config.yaml
services/web-server/migrations/: 0001_create_feedback_table.down.sql  0001_create_feedback_table.up.sql
services/web-server/src/: main.rs
services/web-server/src/repo/: feedback.rs  mod.rs
xlib/: Cargo.toml
xlib/src/app/: graceful_shutdown.rs  serve.rs  tracing.rs
xlib/src/client/: mod.rs  postgres.rs
